@@ -1,6 +1,7 @@
 2009-03-05  Ingo Renner  <ingo@typo3.org>
 
-	* added unit tests for the caching framework (backported from FLOW3) (part of #10614)
+	* Added unit tests for the caching framework file backend (backported from FLOW3) (part of #10614)
+	* Added unit tests for the caching framework memcached backend (backported from FLOW3) (part of #10614)
 
 2009-03-04  Jeff Segars  <jeff@webempoweredchurch.org>
 
